[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosheh"
description = "Mosheh, a tool for creating docs for projects, from Python to Python."
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
maintainers = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
keywords = [
    "CLI",
    "Python",
    "documentation",
    "MkDocs",
    "automation",
    "generation",
]
version = "1.3.4"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "setuptools>=75.6.0",
    "taskipy>=1.14.1",
    "twine>=6.0.1",
]

[project.scripts]
mosheh = "mosheh.main:main"

[project.urls]
Documentation = "https://lucasgoncsilva.github.io/mosheh/"
Repository = "https://github.com/lucasGoncSilva/mosheh/"
Issues = "https://github.com/LucasGoncSilva/mosheh/issues"
Changelog = "https://github.com/LucasGoncSilva/mosheh/blob/main/.github/CHANGELOG.md"

[tool.ruff]
line-length = 88
exclude = [".env", ".venv"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.pytest.ini_options]
addopts = "-s -vv"
python_files = "tests/unittest/*.py"

[tool.setuptools]
packages = ["mosheh"]

[tool.setuptools.package-data]
mosheh = ["py.typed"]

[tool.mypy]
strict = true

[tool.taskipy.tasks]
lint = "uv run ruff check; uv run ruff format; uv run mypy mosheh"
pytest = "uv run pytest"
doctest = "uv run -m mosheh.main -root ./tests/PROJECT/ --output ./tests/DOC/ --verbose 3"
test = "uv run task pytest; uv run task doctest"
